fix: fixes messages overflowing

--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -274,6 +274,7 @@
 }
 .chat-post {
 	display: flex;
+	margin-bottom: 40px;
 }
 .chat-post > *:last-child {
 	padding-left: 20px;
@@ -291,6 +292,12 @@
 	margin-bottom: 5px;
 	padding: 5px;
 }
+
+.chat-message-message-text{
+    overflow-wrap: break-word;
+	width: 100%;
+}
+
 .chat-message-message > *:first-child {
 	margin-bottom: 5px;
 }
